# HVV

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  TODO.txt  load_data.py  main.py  pyproject.toml  readme_tmp.txt  requirements.txt  verify_data.py
.github/workflows/: build_and_push.yml  setup-env-and-test.yml  test_in_docker.yml
app/: load_data.py  main.py  models.py  verify_data.py
app/setup_database/: load_data.py  models.py  verify_data.py
data/: air-pollution_cleaned.csv  airpollution.db  check_clean_airpollution.py
src/app/: main.py
src/app/setup_database/: load_data.py  models.py  verify_data.py
src/tests/: test_main.py
tests/: test_main.py
