[tool.poetry]
name = "app"
version = "0.1.0"
description = "REST-API for Airpollution dataset"
authors = ["lukas_baumgarten <lukas.baumgarten@xvalue.de>"]
packages = [
    { include = "app", from = "src" },
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
annotated-types = "^0.7.0"
anyio = "^4.4.0"
click = "^8.1.7"
colorama = "^0.4.6"
fastapi = "^0.112.1"
greenlet = "^3.0.3"
h11 = "^0.14.0"
idna = "^3.7"
numpy = "^2.1.0"
pandas = "^2.2.2"
pydantic = "^2.8.2"
python-dateutil = "^2.9.0.post0"
python-multipart = "^0.0.9"
pytz = "^2024.1"
six = "^1.16.0"
sniffio = "^1.3.1"
sqlalchemy = "^2.0.32"
starlette = "^0.38.2"
typing-extensions = "^4.12.2"
tzdata = "^2024.1"
uvicorn = "^0.30.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
